--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -1,1 +1,18 @@
+{% extends "base.html" %}
 
+{% block content %}
+<div class="about-page">
+    <div class="about-container">
+        <h1>About Us</h1>
+
+        <!-- Our Story Section -->
+        <div class="about-section">
+            <h2>Our Story</h2>
+            <p>We are passionate about delivering exceptional products and services to our customers. Founded in 2023, our company has grown from a small startup to a trusted name in the industry. Our commitment to quality and customer satisfaction drives everything we do.</p>
+        </div>
+
+        <!-- Our Mission Section -->
+        <div class="about-section">
+            <h2>Our Mission</h2>
+            <p>Our mission is to provide innovative solutions that enhance the lives of our customers. We strive to maintain the highest standards of quality while fostering sustainable practices and building lasting relationships with our clients.</p>
+        </div>
