--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -16,3 +16,31 @@
             <h2>Our Mission</h2>
             <p>Our mission is to provide innovative solutions that enhance the lives of our customers. We strive to maintain the highest standards of quality while fostering sustainable practices and building lasting relationships with our clients.</p>
         </div>
+        <!-- Our Values Section -->
+        <div class="about-section">
+            <h2>Our Values</h2>
+            <ul class="values-list">
+                <li>
+                    <i class="fas fa-check-circle"></i>
+                    Integrity in all our dealings
+                </li>
+                <li>
+                    <i class="fas fa-check-circle"></i>
+                    Excellence in our products and services
+                </li>
+                <li>
+                    <i class="fas fa-check-circle"></i>
+                    Innovation in our solutions
+                </li>
+                <li>
+                    <i class="fas fa-check-circle"></i>
+                    Commitment to customer satisfaction
+                </li>
+                <li>
+                    <i class="fas fa-check-circle"></i>
+                    Sustainability in our practices
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
