--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -44,3 +44,88 @@
         </div>
     </div>
 </div>
+<style>
+    .about-page {
+        padding: 2rem;
+    }
+
+    .about-container {
+        max-width: 800px;
+        margin: 0 auto;
+        background: rgba(44, 62, 80, 0.3);
+        padding: 2rem;
+        border-radius: 15px;
+    }
+
+    .about-container h1 {
+        color: var(--light);
+        font-size: 2.5rem;
+        margin-bottom: 2rem;
+        text-align: center;
+    }
+
+    .about-section {
+        margin-bottom: 3rem;
+    }
+
+    .about-section:last-child {
+        margin-bottom: 0;
+    }
+
+    .about-section h2 {
+        color: var(--deep-orange);
+        font-size: 1.5rem;
+        margin-bottom: 1rem;
+        padding-bottom: 0.5rem;
+        border-bottom: 2px solid rgba(255, 255, 255, 0.1);
+    }
+
+    .about-section p {
+        color: var(--gray);
+        line-height: 1.6;
+        font-size: 1.1rem;
+    }
+
+    .values-list {
+        list-style: none;
+        padding: 0;
+    }
+
+    .values-list li {
+        color: var(--gray);
+        font-size: 1.1rem;
+        margin-bottom: 1rem;
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+    }
+
+    .values-list li i {
+        color: var(--deep-orange);
+        font-size: 1.2rem;
+    }
+
+    @media (max-width: 768px) {
+        .about-page {
+            padding: 1rem;
+        }
+
+        .about-container {
+            padding: 1.5rem;
+        }
+
+        .about-container h1 {
+            font-size: 2rem;
+        }
+
+        .about-section h2 {
+            font-size: 1.3rem;
+        }
+
+        .about-section p,
+        .values-list li {
+            font-size: 1rem;
+        }
+    }
+</style>
+{% endblock %} 
