--- a/pages/create_campaigns.html
+++ b/pages/create_campaigns.html
@@ -1,1 +1,201 @@
 
+{% extends "base.html" %}
+
+{% block content %}
+<div class="create-campaign-container">
+    <div class="campaign-form-wrapper">
+        <h1>Create a Campaign</h1>
+        <p class="form-subtitle">Share your story and start raising funds</p>
+
+        <form class="campaign-form" method="POST" action="{{ url_for('create_campaign') }}" enctype="multipart/form-data">
+            <!-- Basic Information -->
+            <div class="form-section">
+                <h2>Basic Information</h2>
+                <div class="form-group">
+                    <label for="title">Campaign Title</label>
+                    <input type="text" id="title" name="title" required 
+                           placeholder="Give your campaign a clear, attention-grabbing title">
+                </div>
+
+                <div class="form-group">
+                    <label for="category">Category</label>
+                    <select id="category" name="category" required>
+                        <option value="">Select a category</option>
+                        <option value="medical">Medical</option>
+                        <option value="education">Education</option>
+                        <option value="emergency">Emergency</option>
+                        <option value="business">Business</option>
+                        <option value="other">Other</option>
+                    </select>
+                </div>
+
+                <div class="form-row">
+                    <div class="form-group">
+                        <label for="goal">Funding Goal</label>
+                        <div class="input-with-icon">
+                            <i class="fas fa-dollar-sign"></i>
+                            <input type="number" id="goal" name="goal" required min="1" 
+                                   placeholder="Enter amount">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="deadline">Campaign Deadline</label>
+                        <input type="date" id="deadline" name="deadline" required>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Campaign Story -->
+            <div class="form-section">
+                <h2>Your Story</h2>
+                <div class="form-group">
+                    <label for="description">Campaign Description</label>
+                    <textarea id="description" name="description" rows="6" required
+                              placeholder="Share your story. Why are you raising funds? How will the money be used?"></textarea>
+                </div>
+
+                <div class="form-group">
+                    <label for="image">Campaign Image</label>
+                    <div class="file-upload">
+                        <input type="file" id="image" name="image" accept="image/*">
+                        <div class="upload-placeholder">
+                            <i class="fas fa-cloud-upload-alt"></i>
+                            <span>Drop your image here or click to upload</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            
+            <div class="form-actions">
+                <button type="button" class="btn-secondary">Save Draft</button>
+                <button type="submit" class="btn-primary">Create Campaign</button>
+            </div>
+        </form>
+    </div>
+</div>
+
+<style>
+.create-campaign-container {
+    max-width: 1200px;
+    margin: 2rem auto;
+    padding: 0 2rem;
+}
+
+.campaign-form-wrapper {
+    background: rgba(44, 62, 80, 0.3);
+    border-radius: 15px;
+    padding: 3rem;
+}
+
+.campaign-form-wrapper h1 {
+    color: var(--light);
+    margin-bottom: 0.5rem;
+    font-size: 2.5rem;
+}
+
+.form-subtitle {
+    color: var(--gray);
+    margin-bottom: 3rem;
+    font-size: 1.2rem;
+}
+
+.form-section {
+    margin-bottom: 3rem;
+    padding-bottom: 3rem;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.form-section h2 {
+    color: var(--light);
+    font-size: 1.5rem;
+    margin-bottom: 2rem;
+}
+
+.form-group {
+    margin-bottom: 2rem;
+}
+
+.form-row {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2rem;
+}
+
+label {
+    display: block;
+    color: var(--light);
+    margin-bottom: 0.8rem;
+    font-weight: 500;
+    font-size: 1.1rem;
+}
+
+input, select, textarea {
+    width: 100%;
+    padding: 1rem 1.2rem;
+    background: rgba(255, 255, 255, 0.1);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 8px;
+    color: var(--light);
+    transition: all 0.3s ease;
+    font-size: 1rem;
+}
+
+input:focus, select:focus, textarea:focus {
+    outline: none;
+    border-color: var(--deep-orange);
+    background: rgba(255, 255, 255, 0.15);
+}
+
+.input-with-icon {
+    position: relative;
+}
+
+.input-with-icon i {
+    position: absolute;
+    left: 1.2rem;
+    top: 50%;
+    transform: translateY(-50%);
+    color: var(--gray);
+    font-size: 1.2rem;
+}
+
+.input-with-icon input {
+    padding-left: 3rem;
+}
+
+.file-upload {
+    border: 2px dashed rgba(255, 255, 255, 0.2);
+    border-radius: 8px;
+    padding: 3rem;
+    text-align: center;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.file-upload:hover {
+    border-color: var(--deep-orange);
+    background: rgba(255, 255, 255, 0.05);
+}
+
+.upload-placeholder {
+    color: var(--gray);
+}
+
+.upload-placeholder i {
+    font-size: 3rem;
+    margin-bottom: 1.5rem;
+    color: var(--deep-orange);
+}
+
+.upload-placeholder span {
+    font-size: 1.1rem;
+}
+
+.form-actions {
+    display: flex;
+    gap: 1.5rem;
+    justify-content: flex-end;
+    margin-top: 3rem;
+}
+
