--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -1,1 +1,26 @@
+{% extends "base.html" %}
 
+{% block content %}
+<div class="dashboard-container">
+    <!-- Stats Overview -->
+    <div class="stats-overview">
+        <div class="stat-card">
+            <div class="stat-icon">
+                <i class="fas fa-coins"></i>
+            </div>
+            <div class="stat-info">
+                <h3>€1,000</h3>
+                <p>Help Limit</p>
+            </div>
+        </div>
+
+        <div class="stat-card">
+            <div class="stat-icon">
+                <i class="fas fa-hand-holding-heart"></i>
+            </div>
+            <div class="stat-info">
+                <h3>15</h3>
+                <p>People Helped</p>
+            </div>
+        </div>
+    </div>
