--- a/pages/campaign_detail.html
+++ b/pages/campaign_detail.html
@@ -128,3 +128,56 @@
         transform: translateY(-2px);
         box-shadow: 0 0 15px rgba(211, 84, 0, 0.2);
     }
+
+    .campaign-title {
+        font-size: 2.2rem;
+        margin-bottom: 1rem;
+        color: var(--light);
+        font-weight: 600;
+        line-height: 1.3;
+    }
+
+    .campaign-meta {
+        display: flex;
+        gap: 2rem;
+        margin-bottom: 1.5rem;
+    }
+
+    .meta-item {
+        display: flex;
+        align-items: center;
+        gap: 0.8rem;
+        color: var(--gray);
+        font-size: 0.95rem;
+    }
+
+    .meta-item i {
+        color: var(--deep-orange);
+    }
+
+    .campaign-description {
+        color: var(--light);
+        line-height: 1.8;
+        margin-bottom: 2rem;
+        font-size: 1.1rem;
+    }
+
+    .campaign-progress {
+        background: rgba(44, 62, 80, 0.4);
+        padding: 2rem;
+        border-radius: 15px;
+        margin-bottom: 2rem;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    }
+
+    .progress-stats {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 1.5rem;
+    }
+
+    .progress-stats h3 {
+        color: var(--light);
+        font-size: 1.5rem;
+    }
