--- a/pages/campaign_detail.html
+++ b/pages/campaign_detail.html
@@ -181,3 +181,184 @@
         color: var(--light);
         font-size: 1.5rem;
     }
+
+    .progress {
+        height: 10px;
+        background: rgba(236, 240, 241, 0.1);
+        border-radius: 5px;
+        overflow: hidden;
+    }
+
+    .progress-bar {
+        height: 100%;
+        background: linear-gradient(90deg, var(--deep-orange), var(--accent));
+        border-radius: 5px;
+        transition: width 0.6s ease;
+    }
+
+    .donation-section {
+        background: rgba(44, 62, 80, 0.4);
+        padding: 2rem;
+        border-radius: 15px;
+        margin-bottom: 2rem;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    }
+
+    .donation-section h2 {
+        color: var(--light);
+        margin-bottom: 1.5rem;
+        font-size: 1.5rem;
+    }
+
+    .donation-options {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+        gap: 1rem;
+        margin-bottom: 2rem;
+    }
+
+    .donation-amount {
+        background: rgba(255, 255, 255, 0.1);
+        border: none;
+        padding: 1rem 2rem;
+        border-radius: 8px;
+        color: var(--light);
+        cursor: pointer;
+        transition: all 0.3s ease;
+        font-size: 1.1rem;
+    }
+
+    .donation-amount:hover {
+        background: rgba(255, 255, 255, 0.2);
+        transform: translateY(-2px);
+    }
+
+    .donation-amount.active {
+        background: var(--deep-orange);
+        color: white;
+    }
+
+    .help-btn {
+        background: var(--accent);
+        color: white;
+        padding: 1rem 2rem;
+        border-radius: 8px;
+        border: none;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        text-decoration: none;
+        display: inline-flex;
+        align-items: center;
+        gap: 0.5rem;
+        font-size: 1.1rem;
+        justify-content: center;
+        width: 100%;
+        margin-top: 1rem;
+    }
+
+    .help-btn:hover {
+        background: var(--deep-orange);
+        transform: translateY(-2px);
+    }
+
+    .share-section {
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+        margin-left: 1rem;
+    }
+
+    .share-btn {
+        background: rgba(236, 240, 241, 0.1);
+        border: none;
+        padding: 0.8rem 1.5rem;
+        border-radius: 25px;
+        color: var(--light);
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        gap: 0.8rem;
+        transition: all 0.3s ease;
+        font-weight: 500;
+        font-size: 0.9rem;
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        white-space: nowrap;
+    }
+
+    .share-btn:hover {
+        background: var(--deep-orange);
+        transform: translateY(-2px);
+        box-shadow: 0 4px 12px rgba(211, 84, 0, 0.2);
+    }
+
+    .share-dialog {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: rgba(0, 0, 0, 0.7);
+        z-index: 1000;
+        justify-content: center;
+        align-items: center;
+        backdrop-filter: blur(5px);
+    }
+
+    .share-dialog-content {
+        background: var(--secondary);
+        border-radius: 15px;
+        padding: 1.5rem;
+        width: 90%;
+        max-width: 500px;
+        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+    }
+
+    .share-dialog-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 1.5rem;
+    }
+
+    .share-dialog-header h3 {
+        color: var(--light);
+        font-size: 1.2rem;
+        margin: 0;
+    }
+
+    .close-btn {
+        background: none;
+        border: none;
+        color: var(--gray);
+        cursor: pointer;
+        font-size: 1.2rem;
+        padding: 0.5rem;
+        transition: color 0.3s ease;
+    }
+
+    .close-btn:hover {
+        color: var(--light);
+    }
+
+    .share-dialog-body {
+        display: flex;
+        flex-direction: column;
+        gap: 1.5rem;
+    }
+
+    .share-link-container {
+        display: flex;
+        gap: 0.5rem;
+        margin-bottom: 1.5rem;
+    }
+
+    .share-link-container input {
+        flex: 1;
+        background: rgba(255, 255, 255, 0.1);
+        border: 1px solid rgba(255, 255, 255, 0.2);
+        padding: 0.8rem 1rem;
+        border-radius: 8px;
+        color: var(--light);
+        font-size: 0.9rem;
+    }
